@@ -136,6 +136,8 @@ static void
 pdk_init (void)
 {
   asm_addTree (&asm_asxxxx_smallpdk_mapping);
+
+  pdk_init_asmops();
 }
 
 static void
